k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: pavan020504/web-service
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: upload-volume
              mountPath: /app/static/uploads  # Path where your app expects the uploads
      volumes:
        - name: upload-volume
          persistentVolumeClaim:
            claimName: upload-pvc  # Link to the PVC defined above
